--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@azure/msal-browser": "^3.11.1",
+    "@azure/msal-react": "^2.0.14",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.29.0",
@@ -60,23 +62,23 @@
     "@tailwindcss/typography": "^0.5.12",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.0",
+    "@testing-library/react": "^15.0.1",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/common-tags": "^1.8.4",
     "@types/jest": "^29.5.12",
     "@types/lint-staged": "^13.3.0",
     "@types/node": "^20.12.7",
-    "@types/react": "^18.2.75",
-    "@types/react-dom": "^18.2.24",
+    "@types/react": "^18.2.76",
+    "@types/react-dom": "^18.2.25",
     "@types/react-table": "^7.7.20",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-c8": "^0.33.0",
-    "@vitest/coverage-istanbul": "^1.4.0",
-    "@vitest/ui": "^1.4.0",
+    "@vitest/coverage-istanbul": "^1.5.0",
+    "@vitest/ui": "^1.5.0",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "cross-fetch": "^4.0.0",
@@ -99,11 +101,11 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.5",
     "uuid": "^9.0.1",
     "vite": "^5.2.8",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.4.0",
+    "vitest": "^1.5.0",
     "zod": "^3.22.4"
   }
 }
